Tue Aug 21 01:34:49 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/Makefile.in (install): Don't depend on all, so that the
	  package isn't recompiled when running 'make install' on a machine
	  with a skewed clock.
	  Don't install the wrapper. Install man and mandb in $(bindir)
	  rather than $(libdir)/man-db.
	  If lexgrog and globbing have been built, install them in
	  $(libdir)/man-db rather than $(sbindir).
	  Ensure $(sbindir) and $(libdir)/man-db exist.

Tue Aug 21 00:40:47 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/man.c (escape_special): Rename to escape_less(). Constify
	  argument.
	  (determine_lang_table): Constify argument. Unify some common code.
	  (make_display_common): Use escape_less() rather than
	  escape_special().
	* docs/NEWS: Document shell escaping.

Sun Aug 19 23:56:36 BST 2001  Colin Watson  <cjwatson@debian.org>

	* configure.in: Compile with -Wall by default.
	* src/compression.c: Include "security.h".
	* src/manp.c: Likewise.
	* src/check_mandirs.c (purge_whatis): Correct return value when
	  purging a WHATIS_MAN entry with a missing target.
	* src/whatis.c (get_whatis): Remove unused variables 'pointer' and
	  'ext'.
	* src/man.c: Include <time.h> for time().
	  (local_man_loop): Remove unused variable 'dir'.
	  (make_roff_command): Remove unused variable 'tmpfile'.
	  (exist_check): Print 'loc' in pointer format rather than string
	  format (it's a struct mandata *).
	* src/wrapper.c: Include <grp.h> for initgroups().

Sun Aug 19 13:16:01 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (iterate_over_list): New function (get_from_list() can
	  only get the first matching element).
	  (get_manpath): Use iterate_over_list() to get multiple matching
	  MANPATH_MAP entries.

Sun Aug 19 13:02:01 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/man.c (popen, pclose): Rely on the BROKEN_PCLOSE check in
	  configure rather than checking architectures here.